Fixing minor layout issues "contacts"

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -278,11 +278,11 @@ header {
 
 #contacts {
   color: white;
-  padding: 0 20%;
+  padding: 10px 20% 0 20%;
   background-color: darken($humanaColor, 15%);
   @include box-shadow(inset 0 0 200px 10px darken($humanaColor, 30%));
   p {
-    padding: 10px 0 50px 0;
+    padding: 70px 0;
   }
 }
 
